<resources>
    <string name="app_name">Superheroes</string>
    <string name="superhero_image">Superhero Image</string>
    <string name="superhero_name">Superhero Name</string>
    <string name="superhero_gender">Superhero Gender</string>
    <string name="superhero_race">Superhero Race</string>
    <string name="superhero_height">Superhero Height</string>
    <string name="superhero_weight">Superhero Weight</string>
    <string name="superhero_alignment">Superhero Alignment</string>
    <string name="text_int">INT</string>
    <string name="text_str">STR</string>
    <string name="text_spd">SPD</string>
    <string name="text_dur">DUR</string>
    <string name="text_pwr">PWR</string>
    <string name="text_cbt">CBT</string>
    <string name="superhero_int">99</string>
    <string name="superhero_str">99</string>
    <string name="superhero_spd">99</string>
    <string name="superhero_dur">99</string>
    <string name="superhero_pwr">99</string>
    <string name="superhero_cbt">99</string>
    <string name="name_file_xml">superheroes</string>
</resources>