<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSlateGrey"
    android:padding="16dp"
    tools:context=".features.superheroes.presentation.SuperheroDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Datos Principales -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/superheroName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/superhero_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/superheroAlignment"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/superheroName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/darkBlue"
                android:text="@string/superhero_alignment"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/superheroGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/superheroAlignment"
                android:layout_marginStart="10dp"
                android:text="@string/superhero_gender"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/superheroRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/superheroAlignment"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/superheroGender"
                android:text="@string/superhero_race"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/superheroHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/superheroGender"
                android:layout_marginStart="10dp"
                android:text="@string/superhero_height"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/superheroWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/superheroHeight"
                android:layout_marginStart="10dp"
                android:text="@string/superhero_weight"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/superheroImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Contenedor de Estadísticas -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="7">

                <!-- Fila Claves -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <!-- Intelligence -->
                    <TextView
                        android:id="@+id/nameINT"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/navyBlue"
                        android:text="@string/text_int"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <!-- Strength -->
                    <TextView
                        android:id="@+id/nameSTR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/intenseRed"
                        android:text="@string/text_str"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <!-- Speed -->
                    <TextView
                        android:id="@+id/nameSPD"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/oliveDrab"
                        android:text="@string/text_spd"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <!-- Durability -->
                    <TextView
                        android:id="@+id/nameDUR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/forestGreen"
                        android:text="@string/text_dur"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <!-- Power -->
                    <TextView
                        android:id="@+id/namePWR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/burntOrange"
                        android:text="@string/text_pwr"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <!-- Combat -->
                    <TextView
                        android:id="@+id/nameCBT"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:background="@color/purple"
                        android:text="@string/text_cbt"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <!-- Contenedor Valores -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <!-- Fila Valores -->
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <!-- Intelligence -->
                    <TextView
                        android:id="@+id/superheroINT"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <!-- Strength -->
                    <TextView
                        android:id="@+id/superheroSTR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <!-- Speed -->
                    <TextView
                        android:id="@+id/superheroSPD"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <!-- Durability -->
                    <TextView
                        android:id="@+id/superheroDUR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <!-- Power -->
                    <TextView
                        android:id="@+id/superheroPWR"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                    <!-- Combat -->
                    <TextView
                        android:id="@+id/superheroCBT"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="1dp"
                        android:text="@string/superhero_int"
                        android:textAlignment="center"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>